--- a/_posts/2022-11-24-INMEDIA-工程師藏索帶及鐳射筆罪成判囚4個月-官-希望你以後集中建設-唔好集中破壞.html
+++ b/_posts/2022-11-24-INMEDIA-工程師藏索帶及鐳射筆罪成判囚4個月-官-希望你以後集中建設-唔好集中破壞.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/11231509-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年10月13日，有人發起在多區商場聚集，一名24歲工程師涉在黃大仙港鐵站外，管有鐳射筆及一包膠索帶。他否認「管有攻擊性武器」及「管有物品意圖損壞財產」兩罪，今（24日）在九龍塘裁判法院被裁定罪名成立，判囚4個月。裁判官莫子聰裁決時拒絕信納被告供詞，指涉案鐳射筆屬3B級別，有機會能用作射向警員眼睛之用，法庭須阻止相關行為，保障執法人員安全；而索帶則能捆綁雜物作阻路，終裁定罪成。判刑後，他又提醒任工程師的被告：「無論點都好，希望你以後集中建設，唔好集中破壞」。</p>
+<img src="https://www.inmediahk.net/files/column_images/11231509-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年10月13日，有人發起在多區商場聚集，一名24歲工程師涉在黃大仙港鐵站外，管有鐳射筆及一包膠索帶。他否認「管有攻擊性武器」及「管有物品意圖損壞財產」兩罪，今（24日）在九龍塘裁判法院被裁定罪名成立，判囚4個月。裁判官莫子聰裁決時拒絕信納被告供詞，指涉案鐳射筆屬3B級別，有機會能用作射向警員眼睛之用，法庭須阻止相關行為，保障執法人員安全；而索帶則能捆綁雜物作阻路，終裁定罪成。判刑後，他又提醒任工程師的被告：「無論點都好，希望你以後集中建設，唔好集中破壞。」</p>
 <p>判刑前，辯方律師讀出被告父母的求情信，父母稱讚兒子雖然成績一般，但有強大責任心，一直努力奮鬥，對他感到自豪。對於兒子犯案，父母在信中寫道「養不教⋯⋯（父之過）」，辯方律師讀到此處不禁落淚，到場旁聽的被告母親亦淚下。</p>
 <p><strong>拘捕警無記錄被告工程師職業 官：有改進空間</strong></p>
 <p>案發時拘捕被告的警員24215曾供稱，當天在陸建希褲袋中搜出鐳射筆；又在盤問下同意自己當日沒有記錄被告被查問時的回應，包括陸曾表示自己為工程師等。</p>
@@ -22,7 +22,7 @@ author: 獨媒報導
 <p>莫官續批評陸建希刻意隱瞞他對社會運動的看法。在控方盤問下陸稱不清楚「五大訴求，缺一不可」等政治口號，惟莫官指當時社會發生多件轟動性事件，加上媒體鋪天蓋地的報導，不相信被告會沒自己看法、漠不關心。</p>
 <p><strong>判囚4個月 官籲：希望你以後集中建設，唔好集中破壞</strong></p>
 <p>綜合以上，莫官認為陸建希的作供非真相，考慮他當日衣著和較早前在黃大仙廣場聚集的30、40名示威者脗合；而涉案鐳射筆為3B級，在40米內能對眼睛造成傷害，有機會被用作射向警員眼睛；索帶則能捆綁雜物作阻路之用，故裁定他2項罪名成立。</p>
-<p>莫官分別以5個月及2個月作兩項控罪的量刑起點，考慮被告求情信中顯示悔意，亦考慮本案延誤，責任不在被告，酌情在每項刑期上扣減一個月，兩項刑期同期執行，總刑期4個月。他最後又提醒被告：「無論點都好，希望你以後集中建設，唔好集中破壞」。</p>
+<p>莫官分別以5個月及2個月作兩項控罪的量刑起點，考慮被告求情信中顯示悔意，亦考慮本案延誤，責任不在被告，酌情在每項刑期上扣減一個月，兩項刑期同期執行，總刑期4個月。他最後又提醒被告：「無論點都好，希望你以後集中建設，唔好集中破壞。」</p>
 <p><strong>被告自言案件如「當頭棒喝的教訓」</strong></p>
 <p>判刑前，辯方呈上被告親自撰寫的求情信，強調他已有悔意，事件對他來說有如「當頭棒喝的教訓」。他眀白監禁無可避免，但望法庭考慮事件中無人及物件受損，能夠輕判。</p>
 <p>辯方續指，被告一直為人生奮鬥，雖然會考成績不理想，但沒有放棄，夢想成為專業工程師。陸之後在副學士中取得卓越成績，令他成功升讀城市大學工程系。</p>
@@ -33,4 +33,4 @@ author: 獨媒報導
 <p>案件編號：KCCC2518/2021</p>
 <p>相關報導：<br /><a href="https://www.inmediahk.net/node/社運/工程師涉藏索帶鐳射筆-控方指無致電上司向警解釋物品用途-辯方反駁有違無罪推定">工程師涉藏索帶鐳射筆 控方指無致電上司向警解釋物品用途 辯方反駁有違無罪推定</a></p>
 <p><a href="https://www.inmediahk.net/node/社運/工程師涉藏索帶-警稱無記錄被告職業-否認自把自為不記錄對被告有利證據">工程師涉藏索帶 警稱無記錄被告職業 否認自把自為不記錄對被告有利證據</a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
