--- a/_posts/2022-11-24-INMEDIA-高院批評事隔兩年始提控黃之鋒等4人藐視法庭-質疑有人故意拖延.html
+++ b/_posts/2022-11-24-INMEDIA-高院批評事隔兩年始提控黃之鋒等4人藐視法庭-質疑有人故意拖延.html
@@ -9,22 +9,22 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/fung%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>反修例運動期間一名在西灣河開槍的警員被起底，法庭頒布禁制令禁止披露該警身份，又在刑事程序中批出匿名令。包括黃之鋒在內的4人涉嫌違反命令，律政司事隔兩年，突然向高等法院單方面申請許可，交付民事藐視法庭程序。法官高浩文今頒下判詞，狠批律政司幾乎無解釋顯著延誤的原因，只形容到自己「很忙」，質疑有人將案件「入倉」拖延，待適合時機才針對個別人士起訴。</p>
-<p>他強調有權剔除申請，亦曾慎重考慮是否運用該權力。不過因案情一旦證實具一定嚴重性，最終決定批出許可，但他強調不要誤會法庭未就延誤檢控的問題劃線。</p>
+<p>他強調有權剔除申請，亦曾慎重考慮是否運用該權力。不過因案情一旦證實，確具一定嚴重性，最終決定批出許可，但他強調不要誤會法庭未就延誤檢控的問題劃線。</p>
 <p><strong>警方最早2020年1月已作拘捕</strong></p>
-<p>4名被指違反禁制令的人分別為黃之鋒、曾子成、李柏納及王國樑。黃之鋒在2020年8月16日，在Facebook張貼一條連登的連結，附有一張改圖，圖上有「我地老豆係殺人犯」的字眼，內容亦附有開槍警和其家屬的個人資料。黃之鋒的Facebook在一日內將連結刪除，但已經有近5千個互動、186個留言和376次轉載。</p>
-<p>曾子成和李柏納被指在2020年6月17日上載起底資料；王國樑則被指早於2019年11月11日在Facebook上載一條「唔‍好‍傳！千‍祈唔‍好‍傳！」的起底貼文，他在2020年1月9日已經被捕及錄取會影紀錄。</p>
+<p>4名被指違反禁制令的人分別為黃之鋒、曾子成、李柏納及王國樑。黃之鋒在2020年8月16日，在 Facebook 張貼一條連登的連結，附有一張改圖，圖上有「我地老豆係殺人犯」的字眼，內容亦附有開槍警和其家屬的個人資料。黃之鋒的 Facebook 在一日內將連結刪除，但已經有近5千個互動、186個留言和376次轉載。</p>
+<p>曾子成和李柏納被指在2020年6月17日上載起底資料；王國樑則被指早於2019年11月11日在 Facebook 上載一條「唔‍好‍傳！千‍祈唔‍好‍傳！」的起底貼文，他在2020年1月9日已經被捕及錄取會影紀錄。</p>
 <p><strong>官質疑有人見法庭即將劃線 急急將案件清倉</strong></p>
 <p>高浩文法官在判詞特別指出四件案件的案發時間，距離決定檢控的時間，分別已相隔20至28個月，他形容是「significant delay（顯著延誤）」。他指自己曾在今年4月27日頒下一份判詞，表達他對控方延誤檢控感到「真實擔憂」。高浩文指，涉及黃之鋒在內的4單案件，突然就在一個月內，急急向法庭提出單方申請，要求交付檢控。</p>
 <p><strong>律政司解釋延誤：過去兩年很忙</strong></p>
-<p>高浩文表示正常來說，這類許可申請會以文字審理方式進行，但他特別去信要求口頭聆訊，並要律政司解釋延誤檢控的原因。他在判詞引述律政司的書面回覆，代表律政司的大律師指「律政司司長承認這些交付申請可以更早帶上法庭」。高浩文表示，相信很多人會覺得「可以更早帶上法庭」是一個驚人的婉轉說法。（I suspect that many people would think the words “could have been brought earlier” to be a striking euphemism））</p>
-<p>他續指統篇信件都找不到律政司解釋延誤的原因，只是不停重覆案件證據強、法庭需向社會發出阻嚇訊息，他最終在一個註腳，找到似乎是今次顯著延誤的原因，律政司寫道：「法庭會理解律政司在過去兩年需要處理事情之多(The Court would also appreciate the sheer number of matters DOJ had to attend to in the past 2 years. )」。高浩文批評，律政司只是稱自己「很忙」，沒有解釋為何延誤。</p>
+<p>高浩文表示正常來說，這類許可申請會以文字審理方式進行，但他特別去信要求口頭聆訊，並要律政司解釋延誤檢控的原因。他在判詞引述律政司的書面回覆，代表律政司的大律師指「律政司司長承認這些交付申請可以更早帶上法庭」。高浩文表示，相信很多人會覺得「可以更早帶上法庭」是一個驚人的婉轉說法。（I suspect that many people would think the words “could have been brought earlier” to be a striking euphemism.）</p>
+<p>他續指統篇信件都找不到律政司解釋延誤的原因，只是不停重覆案件證據強、法庭需向社會發出阻嚇訊息，他最終在一個註腳，找到似乎是今次顯著延誤的原因，律政司寫道：「法庭會理解律政司在過去兩年需要處理事情之多。（The Court would also appreciate the sheer number of matters DOJ had to attend to in the past 2 years.）」高浩文批評，律政司只是稱自己「很忙」，沒有解釋為何延誤。</p>
 <p><strong>高浩文：證據強何不更早起訴？</strong></p>
 <p>律政司在信件重申，案件是否申請交付，純粹只考慮個別案件的證據。高浩文質疑，律政司的做法會否予人觀念，似乎這類案件被「拖延」，甚至被「入倉」，到有人認為時機適合時，才針對個別人士提出檢控。（These potential committal proceedings might have been ‘sat on’ – or even ‘warehoused’ – ready to be brought forward later, if at some time it was thought appropriate to bring proceedings against the particular individuals concerned.）</p>
 <p>高浩文反問，如果證據越強，豈不是更應該盡快提出檢控？如果要制止起底行為，為何不是花資源去針對牽起輿論的人，反而將資源集中在被牽動的人們身上？高浩文又指，如果要歇止起底行為，最有效的檢控時機應該是起底行為發生後。代表律政司的大律師改為指，各宗案件的表面證據成立，如果法庭不批出許可，大眾可能會誤會，法庭會縱容這類違法行為。律政司又稱延誤是「不幸」，但不會損害各答辯人的抗辯權益。高浩文表示不認同說法，他認為申請若果不在合理時間提出，已經可構成濫權。</p>
 <p><strong>不在合理時間內提出申請已是濫權</strong></p>
 <p>他又指出，一般民事程序的原則是不會曠日持久，律政司的顯著延誤加劇了嚴重性，他強調這類程序應在違反禁令事件發生後，迅速帶到法庭處理。</p>
-<p>法庭解釋本案運用的法律原則，在考慮是否批出許可時，法庭如果認為不能解釋的延誤造成不公平審訊，有權剔除（strike out）交付程序申請，但該權力要非常謹慎地使用，因為法庭另一方面要維護司法程序的完整。他認為律政司對造成的延誤幾乎全無解釋， 延誤亦真實存在，但他認為該問題可以、亦將會在正審處理。他又認為從現時法庭掌握的表面證供可見，一旦罪成，法庭不會對違反禁令的嚴重性視若無睹，決定批出許可。</p>
+<p>法庭解釋本案運用的法律原則，在考慮是否批出許可時，法庭如果認為不能解釋的延誤造成不公平審訊，有權剔除（strike out）交付程序申請，但該權力要非常謹慎地使用，因為法庭另一方面要維護司法程序的完整。他認為律政司對造成的延誤幾乎全無解釋， 延誤亦真實存在，但他認為該問題可以、亦將會在正審處理。他指不會對違反禁令的嚴重性視若無睹，根據現時法庭掌握的表面證供，決定批出許可。</p>
 <p><strong>官結語強調：總要為過去事件劃線</strong></p>
-<p>但高浩文又強調，今次批出許可，不代表法庭再遇到顯著延誤的申請時會再批准；他又提醒外間，不要將案件被視為法庭未就問題劃線。他指「在某一刻，總要為過去的事件畫出一條線。然而，要在何時何地畫出這條線，並非總是那麼簡單。」（At some point, a line needs to be drawn under past events.  However, when and where to draw the line is not always straightforward.）</p>
+<p>但高浩文又強調，今次批出許可，不代表法庭再遇到顯著延誤的申請時會再批准；他又提醒外間，不要將案件被視為法庭未就問題劃線。他指：「在某一刻，總要為過去的事件畫出一條線。然而，要在何時何地畫出這條線，並非總是那麼簡單。」（At some point, a line needs to be drawn under past events.  However, when and where to draw the line is not always straightforward.）</p>
 <p>案件編號：HCMP585/2022</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
