--- a/_posts/2022-11-24-PQ-蕭良嶼-每場選舉都至關重要-不要期待鐘擺-要提防骨牌.html
+++ b/_posts/2022-11-24-PQ-蕭良嶼-每場選舉都至關重要-不要期待鐘擺-要提防骨牌.html
@@ -28,7 +28,7 @@ author: 蕭良嶼
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m.jpg" alt="" class="wp-image-30456" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m-768x512.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>韓國瑜遭罷免　罷韓四君子謝高雄市民支持<br>高雄市長韓國瑜罷免案6日順利過關，讓韓國瑜成為台灣自治史上首名遭罷免的直轄市長，「罷韓四君子」也集體向民眾致謝，感謝市民陪伴他們走完最後一哩路。<br>中央社記者吳家昇攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m.jpg" alt="" class="wp-image-30456" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/06/ab0374f2-20200606000178m-768x512.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>韓國瑜遭罷免　罷韓四君子謝高雄市民支持<br>高雄市長韓國瑜罷免案6日順利過關，讓韓國瑜成為台灣自治史上首名遭罷免的直轄市長，「罷韓四君子」也集體向民眾致謝，感謝市民陪伴他們走完最後一哩路。<br>中央社記者吳家昇攝</figcaption></figure></div>
 
 
 
