--- a/_posts/2022-11-25-INMEDIA-612基金案-陳日君等六人罪成-我係非常贊成做人道援助嘅香港公民.html
+++ b/_posts/2022-11-25-INMEDIA-612基金案-陳日君等六人罪成-我係非常贊成做人道援助嘅香港公民.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/jun%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>已停止運作的「612人道支援基金」5名信託人及前秘書遭票控「沒有在指明時限內申請註冊或豁免註冊社團」，<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/612%E5%9F%BA%E9%87%91%E6%A1%88-6%E4%BA%BA%E7%BD%AA%E6%88%90%E7%BD%B0%E6%AC%BE-%E9%99%B3%E6%97%A5%E5%90%9B%E4%B8%8D%E5%90%8C%E6%84%8F%E5%90%B3%E9%9D%84%E5%84%80%E8%B2%AC%E4%BB%BB%E8%BC%83%E5%A4%A7-%E3%80%8C%E6%88%91%E5%93%8B5%E5%80%8B%E4%B8%80%E6%A8%A3%EF%BC%81%E3%80%8D">今日罪成</a>，天主教香港教區榮休主教陳日君樞機、大律師吳靄儀、前嶺南大學文化研究系客席副教授許寶強、歌手何韻詩及前立法會議員何秀蘭判罰4,000元；前基金秘書施城威則罰款2,500元。陳日君在散庭後表示不希望將案件與宗教自由拉上關係，並稱自己「非常贊成做人道援助嘅香港公民」。</p>
-<p>在散庭後，陳日君、吳靄儀、許寶強、何韻詩及何秀蘭五人見記者。吳靄儀感謝前來的支持者及律師團隊，她指案件是第一宗有關社團沒有按《社團條例》註冊的的案件，結果對香港眾多團體及結社自由非常重要，認為當中有好初很多法律問題，研究判詞後再決定下一步做法。</p>
+<p>在散庭後，陳日君、吳靄儀、許寶強、何韻詩及何秀蘭五人見記者。吳靄儀感謝前來的支持者及律師團隊，她指案件是第一宗有關社團沒有按《社團條例》註冊的案件，結果對香港眾多團體及結社自由非常重要，認為當中有好初很多法律問題，研究判詞後再決定下一步做法。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4Xt9c9YK7s" title="無標題"><img src="https://live.staticflickr.com/65535/52522168289_c570e3df01_b.jpg" width="1024" alt="無標題" /></a><br /><em>吳靄儀</em></p>
 <p>陳日君則表示自己是案件的首被告，「佢哋好俾面，將我擺第一位」，但指五人是一齊做事。他又指不希望將案件與宗教自由拉上關係，亦不希望傳媒強調其宗教身份，強調自己是基金會一分子，亦是「非常贊成做人道援助嘅香港公民」，並感謝各界關心。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4f8dg6j9uP" title="無標題"><img src="https://live.staticflickr.com/65535/52522434978_247359e95c_b.jpg" width="1024" alt="無標題" /></a></p>
