--- a/_posts/2022-11-25-INITIUM-冻蒜之路-选战下的台湾.html
+++ b/_posts/2022-11-25-INITIUM-冻蒜之路-选战下的台湾.html
@@ -9,7 +9,7 @@ author: 许伯崧,陈焯煇,林振東
 ---
 
 <p>「这样的选举季节，则在台湾的日常创造出非日常的间隙，等开票结果尘埃落定，将旋即回归平静。」</p><p>端传媒摄影记者林振东 陈焯𪸩 记者 许伯崧 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-photo-taiwan-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/5124001c2780427eb9b750bc5adfb4fb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月20日，民进党台北市长候选人陈时中举办“疼惜台北 为爱而走”大游行，大会估计参加人数逾15万人。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年11月20日，民进党台北市长候选人陈时中举办“疼惜台北 为爱而走”大游行，大会估计参加人数逾15万人。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><a href="https://theinitium.com/channel/taiwan-election-2022/">2022台湾九合一选举</a>进入倒数读秒阶段，这场原略显冷清的地方选举，直到选前一个月选战才逐渐升温。本届选前，国民党握有14席县市长，并盼能夺回台北市与桃园市等重要选区，民进党则在2018年地方选举大败后仅剩7席县市长，亦有输不得的压力。而2019年创党后首度挑战地方选举的民众党，则希望在本次选举有所斩获，以延续党主席柯文哲声势，叩关2024总统大位。</p>
+            <figcaption itemprop="caption">2022年11月20日，民进党台北市长候选人陈时中举办“疼惜台北 为爱而走”大游行，大会估计参加人数逾15万人。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><a href="https://theinitium.com/channel/taiwan-election-2022/">2022台湾九合一选举</a>进入倒数读秒阶段，这场原略显冷清的地方选举，直到选前一个月选战才逐渐升温。本届选前，国民党握有14席县市长，并盼能夺回台北市与桃园市等关键选区，民进党则在2018年地方选举大败后仅剩7席县市长，亦有输不得的压力。而2019年创党后首度挑战地方选举的民众党，则希望在本次选举有所斩获，以延续党主席柯文哲声势，叩关2024总统大位。</p>
 <p>其中，有13个县市由现任者争取连任，国民党占十席，民进党则为三席，由于受到整体选情偏冷影响，这些执政的现任者拥有竞选优势，挑战者则极力热炒选情，希望唤起选民对“改变”的渴望。</p>
 <p>选前一周，各阵营无论在空战或陆战上都加大声势，候选人除了展开紧锣密鼓的车队扫街行程，向沿路的选民拜票外，并从大街转入市场、深入巷弄，与选民近身接触争取支持。</p>
 <p>晚间，各阵营接连以造势晚会为自家候选人拉抬声势，“冻蒜！”“给地方一个改变的机会！”竞选口号不绝于耳，“换人做做看”成为诉诸改变简单又强力的口号。台下的选民殷切的高举支持看板、比出所衷情候选人的号码。即便选前一周全台各地阴雨绵绵，部分县市更下起滂沱大雨，但依旧浇不熄造势晚会上震耳欲聋的呐喊声响。</p>
@@ -57,8 +57,8 @@ author: 许伯崧,陈焯煇,林振東
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-photo-taiwan-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/c0dcf84bd886470394cf8847da8850ca.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月25日，民进党台北市候选人陈时中的选前之夜，陈时中在大雨下演讲。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年11月25日，民进党台北市候选人陈时中的选前之夜，陈时中在大雨下演讲。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-photo-taiwan-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/a68b8c7f73a34b11be7d819853369b70.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月24日，民进党基隆市长候选人谢国梁在拜访市场期间吃饭，传媒放下咪高峰收音。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月24日，民进党基隆市长候选人谢国梁在拜访市场期间吃饭，传媒放下咪高峰收音。<span class="credit">摄：陈焯𪸩/端传媒 </span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-photo-taiwan-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/a68b8c7f73a34b11be7d819853369b70.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月24日，国民党基隆市长候选人谢国梁在拜访市场期间吃饭，传媒放下咪高峰收音。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月24日，国民党基隆市长候选人谢国梁在拜访市场期间吃饭，传媒放下咪高峰收音。<span class="credit">摄：陈焯𪸩/端传媒 </span></figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-photo-taiwan-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/9dbb2a41bd904404b054c14ef3f7f407.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月24日，争取连任的国民党台中市长卢秀燕举行车队扫街活动，期间到一间庙宇参拜。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年11月24日，争取连任的国民党台中市长卢秀燕举行车队扫街活动，期间到一间庙宇参拜。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
