--- a/_posts/2022-11-25-PQ-中國鬆綁限韓令-韓國電影睽違6年在中國串流平台上映.html
+++ b/_posts/2022-11-25-PQ-中國鬆綁限韓令-韓國電影睽違6年在中國串流平台上映.html
@@ -12,7 +12,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4.png" alt="" class="wp-image-121315" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4.png 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4-300x170.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4-768x436.png 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>11月15日的韓中峰會（圖／新華社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4.png" alt="" class="wp-image-121315" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4.png 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4-300x170.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/4d5584a1-134f9dad-d875-4576-a19b-8fc7f594b1f4-768x436.png 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>11月15日的韓中峰會（圖／新華社）</figcaption></figure></div>
 
 
 
