--- a/_posts/2022-11-26-INITIUM-台湾九合一选举-民进党大败退至八掌溪-投票率61-选情冷清.html
+++ b/_posts/2022-11-26-INITIUM-台湾九合一选举-民进党大败退至八掌溪-投票率61-选情冷清.html
@@ -14,16 +14,17 @@ author: 许伯崧,王怡蓁,郭瑾烨
 <p><a href="https://theinitium.com/channel/taiwan-election-2022/">台湾九合一选举</a>26日完成投开票，民进党创下1989年投入地方选战以来的大败，地方县市长仅取得五席（两都、三县），比1989年首度参选斩获六席少一席，整体板块退守至嘉义县八掌溪以南县市，仅剩嘉义县、台南市、高雄市、屏东县以及离岛的澎湖县</p>
 <p>从本届地方选举投票率观察，本次选举投票率整体仅61.22%，其中六都更低仅有59%，其他县市则为64%。回看2014年，六都平均投票率为66.31%，其他县市平均投票率为70.40%；2018年六都平均投票率为65.95%，其他县市平均投票率则为73.54%。不管是六都、或是其他县市，投票率皆呈现衰退迹象。</p>
 <p>从开票数据来看，与2018年相较，县市长席次部分，民进党从六席减为五席，国民党从15席减为13席（四都、九县）；总得票数上，民进党从500万票减少474万票，流失5%，国民党则从610万票，减为570万票，流失6.5%。</p>
-<p>首都台北选举结果，蒋万安勉强保住40%得票率，最后仅获57万5590票、得票率42.29%。据中选会资料，2014国民党派出连胜文抢攻台北，最后获得60万9932票，得票率40.82%；2018年则由丁守中出马，拿下57万7566票，得票率40.82%的成绩，连两届国民党台北市得票率皆为40.82%。本届蒋万安以国民党“储君”身份夺回台北市，得票率42.29%，创下国民党北市长当选最低纪录，输给前市长马英九、郝龙斌。</p>
+<p>首都台北选举结果，蒋万安勉强保住40%得票率，最后仅获57万5590票、得票率42.29%。据中选会资料，2014国民党派出连胜文抢攻台北，最后获得60万9932票，得票率40.82%；2018年则由丁守中出马，拿下57万7566票，得票率40.82%的成绩，连两届国民党台北市得票率皆为40.82%。本届蒋万安以国民党“储君”身份夺回台北市，得票率42.29%，创下国民党北市长当选最低纪录，输给前市长马英九、郝龙斌。位居第二与第三的陈时中、黄珊珊分别获得43万4558张票、34万2141张票，陈时中以约14万张选票差距落败。</p>
+<p>新北市部分，被外界视为有意参选2024总统大位的侯友宜获得115万2555张票，林佳龙仅获69万3976张票，相较于2018年由苏贞昌投入竞选，民进党流失约18万张票。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-taiwan-election-results/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/ff6c904ecb3f4fa6879b501f13b4231f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月26日，国民党台北市候选人蒋万安在竞选总部外宣布胜选。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月26日，国民党台北市候选人蒋万安在竞选总部外宣布胜选。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure>
 
 <p>再从两大党议员当选席次观察，在县市长只保住南台湾的民进党，在基层政治表现不俗，从2018年的238席成长为277席，成长39席；国民党则从394席减为367席。</p>
-<p>综观各县市分布，大多数议会以国民党席次居多，民进党只在台南市、云林县与嘉义县拿下较多的席次。这样的情况与2018年地方选举相似，民进党当年同样在此三县市拿下比国民党更多的席次，时代力量较前次选举少了10席。在2014年、2018年和今年选战中，国民党皆拿了较多的席次，国民党席次维持在4成左右，民进党约3成，长期而言，国民党在地方政治中仍具优势。</p>
+<p>综观各县市分布，大多数议会以国民党席次居多，民进党只在台南市、云林县与嘉义县拿下较多的席次。这样的情况与2018年地方选举相似，民进党当年同样在此三县市拿下比国民党更多的席次。在2014年、2018年和今年选战中，国民党皆拿了较多的席次，国民党席次维持在四成左右，民进党约三成，长期而言，国民党在地方政治中仍具优势。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-taiwan-election-results/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/7bc50bbe1846457f8ceaa9d16d3d6fac.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
-<p>台湾九合一选举落幕，小党部分，台湾民众党推派86人、时代力量46人、台湾基进24人、欧巴桑联盟15人。民众党全台斩获14席、时代力量2018年当选16位县市议员，其中已有六位退党，剩余十位抢下6席；台湾基进党则抢下两席，欧巴桑联盟本届选举结果仍旧挂零。</p>
+<p>台湾九合一选举落幕，小党部分，台湾民众党推派86人、时代力量46人、台湾基进24人、欧巴桑联盟15人。民众党全台斩获14席、时代力量2018年当选16位县市议员，其中已有六位退党，剩余十位抢下六席，较前次选举少了十席；台湾基进党则抢下两席，欧巴桑联盟本届选举结果仍旧挂零。</p>
 <p>以下，端传媒整理几位小党指标议员候选人选举结果：</p>
 <p><strong>民众党</strong></p>
 <p>顶著柯文哲光环和拥有高话题的“学姊”黄瀞莹参选台北市士林北投区（第一选区），最后以第一高票当选。同样竞选士林北投区的陈思宇曾任台北市观传局长，又有政二代身分加持，父亲陈建铭为现任台北市议员，最终落选。</p>
@@ -33,14 +34,14 @@ author: 许伯崧,王怡蓁,郭瑾烨
 <p>新竹县竹北（第一选区）是由林硕彦、陈立基参选，两人皆是科技背景，林硕彦曾任联电工程师等职，陈立基在工研院服务20年。2019年林硕彦代表民众党角逐新竹县立委失利后，今年卷土重来投入议员选举。林硕彦以5.8%得票率当选，陈立基落榜。</p>
 <p>新竹市东区推派陈锡文、李国璋、宋品莹参选。李国彰去年曾参与国民党市长党内初选失利，加入民众党竞逐议员连任。宋品莹是一位拥有20万粉丝的YouTuber，曾靠拍如何准备托福影片成为网红。东区为新竹市人口最多，议员席次共12席，民众党首度挥军地方选举，全力抢进东区，最后结李国璋和宋品莹分别以5.3%和7.6%当选。</p>
 <p><strong>时代力量</strong></p>
-<p>时代力量本次推派46人参选，历经多人退党和路线争议，此次代表时代力量出战的刘仕杰曾任中华民国外交部欧洲司中东欧科科长，拥有10年外交经历，最后仅获得1.7%得票率，陈思宇获得4%，两人双双未当选。</p>
+<p>时代力量本次推派46人参选，历经多人退党和路线争议，此次代表时代力量出战的刘仕杰曾任中华民国外交部欧洲司中东欧科科长，拥有10年外交经历，最后仅获得1.7%得票率，未能当选。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-taiwan-election-results/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/7dc1bf3321294359829068f42f1c576e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月23日，时代力量三民区市议员兼高雄党部主委林于凯进行车队扫街拉票。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月23日，时代力量三民区市议员兼高雄党部主委林于凯进行车队扫街拉票。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
 <p>林于凯是时代力量三民区市议员兼高雄党部主委、也是时代力量目前在高雄的唯一一席市议员，力拚连任。三民区应选7席，林于凯居第9，无缘连任。</p>
 <p>值得注意的还有香山区议员廖子齐，该选区仅她一名女性登记，因妇女保障名额，选前几乎可以确定当选，开票廖子齐位居第4，该选区应选6名，最终当选。</p>
 <p><strong>台湾基进</strong></p>
-<p>台湾基进本次共提名24人，比2018年提名12人增加一倍，当时无人当选，这次在高雄市提名七位、台南市五位，能否在这两个县市至少拿下三位成立党团，也是选情焦点。</p>
+<p>台湾基进本次共提名24人，比2018年提名12人增加一倍，当时无人当选，这次在高雄市提名七位、台南市五位，能否在这两个县市至少拿下三位成立党团，也是选前焦点。</p>
 <p>2020年高雄罢韩四君子之一张博洋这次出征高雄市三民区（第七选区），李雨蓁则出战高雄最大票仓凤山区（第九选区）；外型亮丽、心脏外科女医吴欣岱参选台北市南港内湖区（第二选区），最后张博洋居第四，该区选七人，正式成为基进的议员第一人；李雨蓁居第10，该区应选八名；吴欣岱成为该区落选头，无缘进军市议会。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221126-taiwan-election-results/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/a1818434652640c991dbb3f8645f0b35.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月25日，参选台北市南港内湖区（第二选区）的台湾基进党心脏外科女医吴欣岱亲自驾车进行拉票活动。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月25日，参选台北市南港内湖区（第二选区）的台湾基进党心脏外科女医吴欣岱亲自驾车进行拉票活动。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
