Update VOCUS 2022-11-28 patch

--- a/_posts/2022-11-27-VOCUS-俄烏戰爭檢討-4.html
+++ b/_posts/2022-11-27-VOCUS-俄烏戰爭檢討-4.html
@@ -40,7 +40,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">這換做台灣就是，軍費勢必要提高。要保有更多的先進武器，就不能開個倉庫丟進去就算了，平時的維護保養都不可缺，人力需求就會提高；要保證開戰時的操作順利，定期檢視與演習也不能少；而要促成人民的支持，就得更多的民事工作，全部都要錢。</div>
 <h3 class="draft-block draft--h3" name="header-6u2ij">資訊戰是為軍事侵略做準備，維持現狀只是幻想</h3>
 <div class="draft-block draft--p left">也難怪台灣高呼和平大家會買單，要民眾多繳稅，或是少點福利，只為了「平常用不到」的武備，違背多年習慣，政客自然樂於配合。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/3FS8iRD4RfA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/3FS8iRD4RfA"></iframe></div>
 <div class="draft-block draft--p left">最恐怖的，並非戰爭開打，而是先進武器著眼精準打擊與遠程投射，使得戰爭感覺不強烈，若中國打定主意要進攻台灣，我們卻沒有保有足夠使用量……那就會跟俄烏戰爭一樣，走到冷戰武器重返舞台，坦克對轟與城鎮戰對打的程度。</div>
 <div class="draft-block draft--p left">而台灣有海峽天險，照道理中國現在實力，根本沒有跨越的可能，為何事情會走到這種程度？</div>
 <div class="draft-block draft--p left">扣除政治因素，剩下的全部是軍事，而克里米亞的丟失，烏東連綿八年的衝突，對烏克蘭人最大的啟示，或許是俄國沒那麼可怕，先前嚇個半死，怕死去畫等邊三角形，希望可以從中獲得和平，最後得到的是什麼？</div>
