--- a/_posts/2022-11-28-INITIUM-从负到零的中国抗议-如果转折点没有来-是因为现在才是开始.html
+++ b/_posts/2022-11-28-INITIUM-从负到零的中国抗议-如果转折点没有来-是因为现在才是开始.html
@@ -8,12 +8,12 @@ tags: blog
 author: 郑昶人
 ---
 
-<p>「眼下运动持续三天，已经超乎所有人预期。」</p><p>郑昶人</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/2dbbc3162b0a4aa38573baa0217cf913.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。<span class="credit">网上图片  </span></figcaption></figure><p>仅仅一个周末，乌鲁木齐某大楼因封控导致火灾救援不及致10人死亡事件，已经在乌鲁木齐、北京、上海、武汉、成都等多个城市引发市民上街抗议活动，并有过半省的当地高校大学生组织同学进行各种针对封控的抗议，情势扩散非常迅猛。</p>
+<p>「眼下运动持续三天，已经超乎所有人预期。」</p><p>郑昶人</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/cefcfa75af2b4e07bbe0b158391cb6a0.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月28日，北京的示威活动中，一名示威者举著白纸并高喊口号。在街头和大学校园，反对封控的抗议蔓延中国各地。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年11月28日，北京的示威活动中，一名示威者举著白纸并高喊口号。在街头和大学校园，反对封控的抗议蔓延中国各地。<span class="credit">图：Bloomberg via Getty Images</span></figcaption></figure><p>仅仅一个周末，乌鲁木齐某大楼因封控导致火灾救援不及致10人死亡事件，已经在乌鲁木齐、北京、上海、武汉、成都等多个城市引发市民上街抗议活动，并有过半省的当地高校大学生组织同学进行各种针对封控的抗议，情势扩散非常迅猛。</p>
 <p>过去对中国民众的认知一般是缺乏政治行动的意识、条件和经验，虽然三年防疫令人疲惫，民怨也见积累，但这样形式的爆发，出乎所有人意料。相关信息不断被删，网络上形成信息接力；所有抗议活动也必然要遭遇国家机器，但这并未形成对民众的阻吓。人们惊讶地看到两天内民意沸腾，而个别当地也以局部解封的措施来回应民意。</p>
-<p>起初各地还是中国特色的策略性标语如“为人民服务”，随后是南京传媒学院大学生“国家要为这一切负责”的反击，到26日的上海深夜，一场悼念活动升级成抗议中，是“不要独裁要自由”、“共产党下台”、“习近平下台”的直白。这恰恰回应著一个月前、中共二十大召开前一日，北京四通桥上的抗议者“不要封控要自由”、“罢课罢工罢免独裁国贼习近平”的控诉。</p>
+<p>起初各地还是中国特色的策略性标语如“为人民服务”，随后是南京传媒学院大学生“国家要为这一切负责”的反击，到26日的上海深夜，一场悼念活动升级成抗议中，是“不要独裁要自由”、“共产党下台”、“习近平下台”的直白。这恰恰回应着一个月前、中共二十大召开前一日，北京四通桥上的抗议者“不要封控要自由”、“罢课罢工罢免独裁国贼习近平”的控诉。</p>
 <p>对生活失落的不满也在这场抗议里。“中国电影已死”的口号出现，疫情加审查导致电影行业生态没落扭曲，电影院陆续倒闭，今年九成以上的电影是主旋律电影。另外，要求“新闻自由、言论自由”也是三年多来更大面积的管控及污染的信息环境下少见的表态，过去几年，“谣言”几乎要成为靠近真相的唯一方式。</p>
-<p>从两年前的李文亮，到今年的四月之声，疫情中惊人的悲剧一再发生，但所有人都没想到，四通桥惊世骇俗地打破一潭死水，一个月后乌鲁木齐事件则像打开了中国。喊著相似的口号，星火处都是四通桥，形成反复加强的回音效果。</p>
+<p>从两年前的李文亮，到今年的四月之声，疫情中惊人的悲剧一再发生，但所有人都没想到，四通桥惊世骇俗地打破一潭死水，一个月后乌鲁木齐事件则像打开了中国。喊着相似的口号，星火处都是四通桥，形成反复加强的回音效果。</p>
 <p>从反对核酸到反对暴政，呐喊和团结这次有用？以及，方向呢？</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/3d8d6134afa8478993f25d8eaa6211d5.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月26日深夜，上海乌鲁木齐中路聚集大量市民，悼念11.24乌鲁木齐火灾10位逝者，有人人们在街道上点燃蜡烛，献上鲜花。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年11月26日深夜，上海乌鲁木齐中路聚集大量市民，悼念11.24乌鲁木齐火灾10位逝者，有人人们在街道上点燃蜡烛，献上鲜花。<span class="credit">网上图片</span></figcaption></figure>
@@ -25,7 +25,7 @@ author: 郑昶人
 <p>抗议封控潮发生的背景，正是中共二十大之后，国家提出似乎暗示开放趋势的“20条”和“国9条”后、地方应对的无所适从期。</p>
 <p>不是不存在对中国抗疫政策的微词：李文亮、上海四月之声、瑞丽封锁、贵州大巴倾覆等等，但网络表述多集中在苦难上，可以说从未形成真正的运动。除李文亮明确表达“健康的社会不能只有一种声音”以外，一种政治性的反对一直都不存在。</p>
 <p>很长时间以来，中国人普遍接受政府作为保护者的角色，政府以最经典的“利维坦”模式作为家长、庇护者，并通过经济绩效维护自身合法性地位。中国人愿意接受在蛋糕不断做大的前提下，在自我照顾的责任上多让渡一些权利维护安全，以换取经济收益的保证。这一文革后的基本政治共识以“以经济建设为中心”成为执政党最核心的口号，“六·四”事件造成政治改革动力和政治信任归零后，毫无疑问地成为几乎仅有的合法性来源。</p>
-<p>三年后，经济衰退已经不是近在咫尺的威胁而是正在发生的震荡，绩效合法性在短短几年内完全变成了基于安全的合法性，“动态清零”几乎成为了真正的基本国策，反对它就是想让中国人死。习近平将其提高到“算政治账”和“要坚持人民至上、生命至上”的水平，已经很清楚地表达了这一政策的本质是政治而非科学的。人民高于一切，就意味着定义谁是人民的权力高于一切权力；生命高于一切，就意味着活着的权利高于一切权利。“生存权”被指认为第一人权，而非“不自由毋宁死”。保障绝大多数人都能活著，成为了政府的基本要义。</p>
+<p>三年后，经济衰退已经不是近在咫尺的威胁而是正在发生的震荡，绩效合法性在短短几年内完全变成了基于安全的合法性，“动态清零”几乎成为了真正的基本国策，反对它就是想让中国人死。习近平将其提高到“算政治账”和“要坚持人民至上、生命至上”的水平，已经很清楚地表达了这一政策的本质是政治而非科学的。人民高于一切，就意味着定义谁是人民的权力高于一切权力；生命高于一切，就意味着活着的权利高于一切权利。“生存权”被指认为第一人权，而非“不自由毋宁死”。保障绝大多数人都能活着，成为了政府的基本要义。</p>
 <p>这是最赤裸、最经典的生命政治：政府保障你的活着，而你除了活着以外一无所有，所有人本质上都是集中营中的“赤裸生命”，每一点生物性以外的需求都是可取消的。而这也是所有抗疫政策的核心争议：哪一种生命更重要？活着，还是生活？</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/10/2a52bca44874459eab47cd92dad8127e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月13日，一位市民在北京通干道四海淀区的交通桥上悬挂起了两条横幅抗议，引起各界关注。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年10月13日，一位市民在北京通干道四海淀区的交通桥上悬挂起了两条横幅抗议，引起各界关注。<span class="credit">网上图片</span></figcaption></figure>
@@ -34,6 +34,9 @@ author: 郑昶人
 <p>与此同时，再度大规模爆发的冬季疫情也造成多地封锁，而二十大后的二十条释放了放开和封锁并举的空间，在地方形成了政策方向上的混乱。一方面有石家庄左右横跳的休克疗法，另一方面有已经爆发的各大城市通过封锁“攻坚”。其中就包括郑州，而正是郑州富士康在继续运作和遵守防疫要求之间进退失据造成了大量工人难民并形成国际关注，推高了对防疫政策改变的讨论，甚至是打出了大规模暴力抵抗封锁政策的第一“棍”。</p>
 <p>到乌鲁木齐火灾前，其实多地都已经有零星冲击封锁，但是乌鲁木齐火灾当中遇难的孩子、“开门”的嘶喊引爆了舆论，超长的封锁时间带来的民生凋敝（瑞丽）、求而不得的生命安全（贵州大巴）、自由的丧失（上海四月之声）全部叠加在一起，希望变成了绝望，合法变成了不合法。当“动态清零”即不能带来安全，也无法保证绩效，作为实质上的基本国策必然成为政治不满的靶子。</p>
 <p>在习近平强化党权的方针下，公民自发的反对运动偃旗息鼓已久，取而代之的是一系列党政机构落入基层，权力的毛细血管无限延伸，可以说中国的公民社会不只是归零而是倒退到了负数。在悼念乌鲁木齐遇难者的哀伤和针对清零政策的不满之中，中国的公民运动至少完成了从负到零的重现。之所以是零，是因为现在才是新的开始。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/2dbbc3162b0a4aa38573baa0217cf913.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。<span class="credit">网上图片</span></figcaption></figure>
+
 <h2>运动的膨胀与边界</h2>
 <blockquote>
 <p>最意外也最重要的是从南广开始的大学呼应和白纸抗议，明确地提出了高于解封的联系，真正具备成为政治运动的潜力。</p>
@@ -62,7 +65,7 @@ author: 郑昶人
 </blockquote>
 <p>在习近平的前两个任期，他更多地在向民族主义和民粹主义话语试水，试图通过向模糊的“人民”靠拢，并进一步收紧舆论控制来重塑共产党形象，与此同时经济增长在多重因素影响下放缓，客观上也刺激他寻求新的合法性支撑。在“核心矛盾在于人民日益增长的美好生活需求与不平衡不充分发展之间的矛盾”实质上取消了经济增长的优先性后，包括“中国梦”、“扶贫攻坚”等等口号与运动都在为建立新合法性服务，乃至二十大的“规范财富积累制度”也是这种努力的一部分——乞灵于社会主义式的再分配改革，以避免在蛋糕做不大的情况下丧失更多支持，而收紧社会控制和意识形态的日趋保守化则被“百年未有之大变局”、“严峻复杂的国际形势和接踵而至的巨大风险挑战”等等对“伟大斗争”的需要所正名。</p>
 <p>习近平强调改革攻坚受阻而进入“全面深化改革”和反腐的紧急状态，不惜以破坏来之不易的常态化政治运作体制为代价，不断用新的运动延长、强化自己的统治，以实现在个人任期内最终完成不知后果如何的中共合法性全面重建。</p>
-<p>但这都是在新冠之前。经过初期的混乱后，习近平最终选择重复自己的非典经验，让社会运转完全让步于生命保全。没错，早期封城的确是科学性的选择，但别忘了最开始政府是为了开两会而拒绝承认防疫必要性的，李文亮正是在这一背景下主动站出来。政治问题从最开始就超过了流行病学的科学性。此后封城清零带来的短暂成功在奥密克戎的冲击下再度终结，政府转而用原始株在武汉、德尔塔在欧美肆虐时的种种“人间地狱”景象、“长新冠”的各种后遗症等等信息给广大民众奠定的心理恐惧，回避更公开、科学的讨论，而以“政治账”作为最终定性。</p>
+<p>但这都是在Covid之前。经过初期的混乱后，习近平最终选择重复自己的非典经验，让社会运转完全让步于生命保全。没错，早期封城的确是科学性的选择，但别忘了最开始政府是为了开两会而拒绝承认防疫必要性的，李文亮正是在这一背景下主动站出来。政治问题从最开始就超过了流行病学的科学性。此后封城清零带来的短暂成功在奥密克戎的冲击下再度终结，政府转而用原始株在武汉、德尔塔在欧美肆虐时的种种“人间地狱”景象、“长Covid”的各种后遗症等等信息给广大民众奠定的心理恐惧，回避更公开、科学的讨论，而以“政治账”作为最终定性。</p>
 <p>2020年初的武汉封城期间的民生断供和民间自救在其它城市反复上演，唯独没有重现的是医院挤兑，以医院无法正常运作为代价，正是“生命至上”逻辑命门所在。但从根本上说，无论是经济萎缩造成的物质不足，还是资源再分配的政府治理能力不足，还是医疗资源不足，都绝无可能在运动的浪潮中、或是在放开的经济恢复中得到解决，但是即便如此，“不肯放开”只能说是一种借口，因为准备永远不可能完全，只能是遇到问题解决问题，而不是妄想自己能够在开放前做好所有准备。开放就是没有既定章程、顺序，就是要试错，这在以往的中国基层政府非常多见，而现在政府以自己没有准备为理由拒绝改变，是近十年来养成的全能政府、官僚主义的惯性思维。</p>
 <p>当然，在社会上普遍存在恐惧且没有足够公卫资源应对爆发的条件下，难以在短期内伴随大规模感染的前提下恢复和正常条件同水平的经济生产和消费，而这也就取消了放开的经济意义。但这个不可能三角不是渴望解封的城市中产造成的，自然也不是“自由主义解封派”能解决的。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/06e0ce9843c34504bc253f54adf19d3c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月23日，郑州富士康爆发抗争，大批身穿白色防护服者追逐殴打工人。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -75,6 +78,6 @@ author: 郑昶人
 <p>运动不可能提供总解决方案，但是正如主席所说，不能只算经济账，症结在于政治账。</p>
 <figure class="image"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2017/08/e04995a6c6d34b94911387b5e5646c04.jpg?imageView2/1/w/1080/h/460/format/jpg" alt itemprop="image" referrerpolicy="no-referrer"></a>
 
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
+<figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
-<p>2017年7月，端傳媒啟動了對深度內容付費的會員機制。但本文因關乎重大公共利益，我們特別設置全文免費閱讀，歡迎你轉發、參與討論，也期待你<a href="https://theinitium.com/subscription/offers/">付費支持我們</a>，瀏覽更多深度內容。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+<p>2017年7月，端传媒启动了对深度内容付费的会员机制。但本文因关乎重大公共利益，我们特别设置全文免费阅读，欢迎你转发、参与讨论，也期待你<a href="https://theinitium.com/subscription/offers/">付费支持我们</a>，浏览更多深度内容。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
