--- a/_posts/2022-11-27-INMEDIA-團體批政府市集如-工展會-倡讓基層檔主參與.html
+++ b/_posts/2022-11-27-INMEDIA-團體批政府市集如-工展會-倡讓基層檔主參與.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p>「撐・基層墟市聯盟」今於美孚舉辦「香港墟市節2022-23」，並公布早前有關周末市集的問卷調查結果。調查收集了161名受訪者回覆，過半人平均月入少於一萬。</p>
 <p>調查發現逾9成半受訪者支持墟市於全港18區恆常舉行，並認同墟市能為基層提供創業及就業機會、提供多元經濟選擇、作為疫情下的扶貧措施、提供發展機會予本地生產小店、及有效活化閒置用地。逾9成半受訪者亦望政府降低周末市集的申請門檻，確保基層市民受惠。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/j38LKRa2Y6" title="姚舒敏"><img src="https://live.staticflickr.com/65535/52526216421_51eb24896c_c.jpg" width="800" alt="姚舒敏" /></a><br /><em>姚舒敏</em></p>
-<p>團體批周末市集如「工展會」 盼容納基層自家產品</p>
+<p><strong>團體批周末市集如「工展會」 盼容納基層自家產品</strong></p>
 <p>「撐・基層墟市聯盟」代表姚舒敏表示，樂見《施政報告》提及周末市集，惟她曾到訪政府籌辦的「秋日樂繽紛嘉年華」，發現大部分商品來自大集團及連鎖店，基層檔主寥寥可數，猶如「工展會」翻版。她又指，政府至今未公布該5個市集的申請機制和詳情，令欲參與的檔主無從入手。</p>
 <p>聯盟建議，政府應為周末市集設立具透明度的申請機制，並降低申請門檻以確保基層市民能參與。組織亦建議政府開放閒置用地舉辦墟市，為基層人士提供創業及就業機會，及成立「墟市種籽基金」讓非牟利團體申領撥款，令基層墟市能恆常及長遠營運。</p>
 <p>售賣手作鈎織商品的檔主Michelle憶述，曾有客人為了買她的鈎織手袋，在搭巴士中途下車。她指自己能在墟市一展所長，亦獲客人認同，望未來周末市集亦能容下基層檔主的自家製產品。</p>
