--- a/_posts/2022-11-27-INITIUM-现场-乌鲁木齐中路一夜一日-燎原的火花被点燃.html
+++ b/_posts/2022-11-27-INITIUM-现场-乌鲁木齐中路一夜一日-燎原的火花被点燃.html
@@ -12,7 +12,7 @@ author: 端传媒中国组
             <figcaption itemprop="caption">2022年11月27日，曾聚集大量悼念市民的上海乌鲁木齐中路，路牌被拆掉放在地上。<span class="credit">网上图片  </span></figcaption></figure><p><small>【编者按】11月24日，乌鲁木齐大火；25日，新疆人走出家门抗议；26日晚，在上海的乌鲁木齐中路，民众自发前来悼念，现场有人带领高喊口号、抗议封控，警民发生冲突，多位民众被带走；27日，乌鲁木齐中路有民众聚集，要求警察放人，被警方清场。现场图片显示，“乌鲁木齐中路”的路标已被拆除。端传媒采访了这一夜一日，走在乌鲁木齐中路上的普通人。</small></p>
 <h2>从悼念到警戒：香薰蜡烛，新疆棉，拥抱</h2>
 <p>11月26日晚上9点多，住在上海的星星在一个微信群里看到，在乌鲁木齐中路有悼念乌鲁木齐火灾死难者的活动，她住得近，就从家里过去。刚去到的时候，现场只有十几个人，路上放着一个箱子的鲜花，有人从箱子里拿出白色的花，放在路边，和一整排的蜡烛摆在一起。星星看见很多人摆的是香薰蜡烛，她推测大家都是临时起意过来的，没有特别的准备。</p>
-<p>乌鲁木齐中路和安福路、长乐路交接，这里有很多咖啡馆和酒吧，是上海最多年轻人聚集的地方。星星说，今年上海封城到最后，也有很多年轻人在安福路上喝酒、唱歌狂欢。26日晚上，她所见到的都是大约20岁到30岁的人，男生女生都很时髦，穿着得很漂亮，“很上海的年轻人，非常朝气蓬勃，非常好看，非常漂亮，但同时他们又非常愤怒，非常悲伤”。她听到有人用在外放一首歌曲，她听不懂，用手机听歌识曲的功能识别，是俄罗斯维吾尔族歌手木拉提·纳斯洛夫的一首歌。</p>
+<p>乌鲁木齐中路和安福路、长乐路交接，这里有很多咖啡馆和酒吧，是上海最多年轻人聚集的地方。星星说，今年上海封城到最后，也有很多年轻人在安福路上喝酒、唱歌狂欢。26日晚上，她所见到的都是大约20岁到30岁的人，男生女生都很时髦，穿着得很漂亮，“很上海的年轻人，非常朝气蓬勃，非常好看，非常漂亮，但同时他们又非常愤怒，非常悲伤”。她听到有人在外放一首歌曲，她听不懂，用手机听歌识曲的功能识别，是俄罗斯维吾尔族歌手木拉提·纳斯洛夫的一首歌。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-mainland-shanghai-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/efaa53a76fb34727876ae3717ba5dcd0.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月26日深夜，上海乌鲁木齐中路聚集大量市民，悼念11.24乌鲁木齐火灾10位逝者。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年11月26日深夜，上海乌鲁木齐中路聚集大量市民，悼念11.24乌鲁木齐火灾10位逝者。<span class="credit">摄影：Diane Lee</span></figcaption></figure>
 
@@ -75,4 +75,5 @@ author: 端传媒中国组
 
 <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
+<p><strong>应受访者要求，均为化名</strong></p>
 <p>2017年7月，端传媒启动了对深度内容付费的会员机制。但本文因关乎重大公共利益，我们特别设置全文免费阅读，欢迎你转发、参与讨论，也期待你<a href="https://theinitium.com/subscription/offers/">付费支持我们</a>，浏览更多深度内容。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
