--- a/_posts/2022-11-28-INMEDIA-抗疫歌被內地網民用作撐示威者-陳奕迅youtube關閉留言功能.html
+++ b/_posts/2022-11-28-INMEDIA-抗疫歌被內地網民用作撐示威者-陳奕迅youtube關閉留言功能.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p>隨着內地推行「清零」及封控的防疫政策，早於10月13日中共二十大前夕，有民眾在北京四通橋掛起兩條橫幅，寫有「不要核酸要吃飯」、「不要領袖要選票」等字句。《孤勇者》已成為民眾憑歌寄意的歌曲，亦有人以「孤勇者」、「勇士」形容當日掛橫額的人。事後，有人在歌曲留下評論而被封帳號，「勇士」亦成為微博的敏感詞。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/y2dWJ01R6M" title="北京四通橋"><img src="https://live.staticflickr.com/65535/52529061754_6150a2209f_c.jpg" width="800" alt="北京四通橋" /></a><br /><em>網上圖片：北京四通橋</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0Ket0EQ0J4" title="清華大學"><img src="https://live.staticflickr.com/65535/52527406719_fe099d8fe7_c.jpg" width="800" alt="清華大學" /></a><br /><em>網上圖片：有學生在清華大學舉白紙抗議</em></p>
-<p>新疆烏魯木齊一棟住宅大廈上周五（24日）發生火警，釀成10死9傷後，中國多地民眾上街舉白紙抗議封控，高喊「民主法治，表達自由」、「反對霸權」、「反對獨裁」、「反對終身制」、「罷免習近平」等口號，《孤勇者》再次引起內地民眾共嗚，又被他們用來形容街上抗議的人。近日，有網民在YouTube的 《孤勇者》下以簡體字留言，如「我沒當懦夫，昨天」、「獻給所有冒着危險上街抗議的人」，今日歌曲的留言功能已被關閉。</p>
+<p>新疆烏魯木齊一棟住宅大廈上周四（24日）發生火警，釀成10死9傷後，中國多地民眾上街舉白紙抗議封控，高喊「民主法治，表達自由」、「反對霸權」、「反對獨裁」、「反對終身制」、「罷免習近平」等口號，《孤勇者》再次引起內地民眾共鳴，又被他們用來形容街上抗議的人。近日，有網民在YouTube的 《孤勇者》下以簡體字留言，如「我沒當懦夫，昨天」、「獻給所有冒着危險上街抗議的人」，今日歌曲的留言功能已被關閉。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/q22951BbY0" title="thumbnail"><img src="https://live.staticflickr.com/65535/52528300072_c78bd5d90e_c.jpg" alt="thumbnail" /></a><br /><em>網上圖片：留言功能關閉前有人以簡體字留言</em></p>
 <p><strong>曾被用作致敬醫護人員及公安</strong></p>
 <p>由陳奕迅主唱的《孤勇者》是遊戲《英雄聯盟》衍生動畫劇集《英雄聯盟：雙城之戰》的中文版推廣歌曲。據悉，單曲在2021年11月推出後，連續3個月高居內地音樂平台榜首，受內地民眾追捧。</p>
