--- a/_posts/2022-11-28-INITIUM-从负到零的中国抗议-如果转折点没有来-是因为现在才是开始.html
+++ b/_posts/2022-11-28-INITIUM-从负到零的中国抗议-如果转折点没有来-是因为现在才是开始.html
@@ -22,9 +22,9 @@ author: 郑昶人
 <blockquote>
 <p>在悼念乌鲁木齐遇难者的哀伤和针对清零政策的不满之中，中国的公民运动至少完成了从负到零的重现。</p>
 </blockquote>
-<p>抗议封控潮发生的背景，正是中共二十大之后，国家提出似乎暗示开放趋势的“20条”和“国9条”后、地方应对的无所适从期。</p>
+<p>抗议封控潮发生的背景，正是中共二十大之后，国家提出似乎暗示开放趋势的<a href="http://www.news.cn/politics/2022-11/11/c_1129120702.htm">“20条”</a>后、地方应对的无所适从期。</p>
 <p>不是不存在对中国抗疫政策的微词：李文亮、上海四月之声、瑞丽封锁、贵州大巴倾覆等等，但网络表述多集中在苦难上，可以说从未形成真正的运动。除李文亮明确表达“健康的社会不能只有一种声音”以外，一种政治性的反对一直都不存在。</p>
-<p>很长时间以来，中国人普遍接受政府作为保护者的角色，政府以最经典的“利维坦”模式作为家长、庇护者，并通过经济绩效维护自身合法性地位。中国人愿意接受在蛋糕不断做大的前提下，在自我照顾的责任上多让渡一些权利维护安全，以换取经济收益的保证。这一文革后的基本政治共识以“以经济建设为中心”成为执政党最核心的口号，“六·四”事件造成政治改革动力和政治信任归零后，毫无疑问地成为几乎仅有的合法性来源。</p>
+<p>很长时间以来，中国人普遍接受政府作为保护者的角色，政府以最经典的“利维坦”模式作为家长、庇护者，并通过经济绩效维护自身合法性地位。中国人愿意接受在蛋糕不断做大的前提下，在自我照顾的责任上多让渡一些权利维护安全，以换取经济收益的保证。这一文革后的基本政治共识以“以经济建设为中心”成为执政党最核心的口号，在“六·四”事件造成政治改革动力和政治信任归零后，毫无疑问地成为几乎仅有的合法性来源。</p>
 <p>三年后，经济衰退已经不是近在咫尺的威胁而是正在发生的震荡，绩效合法性在短短几年内完全变成了基于安全的合法性，“动态清零”几乎成为了真正的基本国策，反对它就是想让中国人死。习近平将其提高到“算政治账”和“要坚持人民至上、生命至上”的水平，已经很清楚地表达了这一政策的本质是政治而非科学的。人民高于一切，就意味着定义谁是人民的权力高于一切权力；生命高于一切，就意味着活着的权利高于一切权利。“生存权”被指认为第一人权，而非“不自由毋宁死”。保障绝大多数人都能活着，成为了政府的基本要义。</p>
 <p>这是最赤裸、最经典的生命政治：政府保障你的活着，而你除了活着以外一无所有，所有人本质上都是集中营中的“赤裸生命”，每一点生物性以外的需求都是可取消的。而这也是所有抗疫政策的核心争议：哪一种生命更重要？活着，还是生活？</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221128-opinion-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/10/2a52bca44874459eab47cd92dad8127e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月13日，一位市民在北京通干道四海淀区的交通桥上悬挂起了两条横幅抗议，引起各界关注。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
