--- a/_posts/2022-11-28-INITIUM-早报-香港中环和中文大学有市民和学生响应内地-白纸-抗议.html
+++ b/_posts/2022-11-28-INITIUM-早报-香港中环和中文大学有市民和学生响应内地-白纸-抗议.html
@@ -8,8 +8,8 @@ tags: blog
 author: 
 ---
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221129-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/1cb8ca84ba9a4b909c7aec28166842f0.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月28日，香港中环商业街，民众响应内地“白纸”抗议。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年11月28日，香港中环商业街，民众响应内地“白纸”抗议。<span class="credit">摄：Lam Yik/Getty Images</span></figcaption></figure><h3>香港中环数十人悼念乌鲁木齐大火死难者</h3>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221129-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/8adf97398923477d87695de22796635f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月28日，香港中文大学学生响应号召，近60人聚集于文化广场，手持白纸，悼念死难者。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年11月28日，香港中文大学学生响应号召，近60人聚集于文化广场，手持白纸，悼念死难者。<span class="credit">摄：Paul Yeung/端传媒</span></figcaption></figure><h3>香港中环数十人悼念乌鲁木齐大火死难者</h3>
 <p>昨日傍晚，<a href="https://www.facebook.com/theinitium/posts/pfbid0GXPJq2V4JqMeoczwpGjs1GAmn84W5otrE5UPjieVSvKh7MuvYg6Ep2hCM7kP6K6Yl">数十人在香港中环商业区聚集</a>，响应网上发起的“香港悼念乌鲁木齐冤火与清零遇难者”活动，在场者包括香港本地人、中国内地学生以及外籍人士。</p>
 <p>现场有人点亮烛光，手持白纸响应内地“白纸”抗议，并在地上摆放白花及标语。标语写有“再封控，怎么抢人才、怎么建设美好大湾区”“人民至上、生命至上、逝者安息：我不是外部势力，是合格爱国中国公民”等。</p>
 <p>有一名香港女生手持标语写着“我不是境外势力、举牌没有钱”。还有人高举纸张写着“悼乌鲁木齐和清零政策遇难者”，以及“陆港不割席！！！Don't cut tie. 2019 I've been there.”</p>
