--- a/_posts/2022-11-29-INITIUM-现场-北京亮马河-此刻-我们在这里就是意义.html
+++ b/_posts/2022-11-29-INITIUM-现场-北京亮马河-此刻-我们在这里就是意义.html
@@ -5,13 +5,13 @@ date: 2022-11-29 06:21:00.000000000 +00:00
 link: https://theinitium.com/article/20221129-mainland-beijing-zero-covid-protests/
 categories: initium
 tags: blog
-author: 特约撰稿人 丰烨 端传媒记者 赵流 发自新加坡
+author: 端传媒中国组 发自新加坡
 ---
 
-<p>「他们留下了各种口号、宣言，也为某种自由的信仰而呐喊。」</p><p>特约撰稿人 丰烨 端传媒记者 赵流 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221129-mainland-beijing-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/81734e5a8ed3458ab5c6368d510a36a8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞的游行，部分人手持白纸，高喊口号。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「他们留下了各种口号、宣言，也为某种自由的信仰而呐喊。」</p><p>端传媒中国组 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221129-mainland-beijing-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/81734e5a8ed3458ab5c6368d510a36a8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞的游行，部分人手持白纸，高喊口号。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞的游行，部分人手持白纸，高喊口号。<span class="credit">摄影：Sophie Mou</span></figcaption></figure><p>11月27日晚上11点半左右，被疏散的人群，重新聚集在北京朝阳区京城大厦附近（新源里、新源南路与新东路交界处、朝阳区新源南路12号），规模至少500人。他们当中有不少人拿着鲜花、空白的A4纸，被警方分据于丁字路口的两侧，口号不时响起。</p>
 <p>“不要核酸，要自由”“言论自由，新闻自由”“上海放人”“电影自由”“要自由”“取消核酸”。</p>
-<p>口号和呐喊的声量加大，小范围的骚乱随之而来。聚集的中心区块，有人带头唱起了国歌，便衣、警察涌入人群，试图阻止这一行为。当人群中发出“不许动手”的声响那刻，宿明看到，警察正在大声和呐喊的男生争沙，让他停止，并用肩膀将他往人群外面顶。这个过程大约持续了一分钟，聚集的人群，让那个配有黑色国徽帽的警察低下了头，往人群的左侧后退。</p>
+<p>口号和呐喊的声量加大，小范围的骚乱随之而来。聚集的中心区块，有人带头唱起了国歌，便衣、警察涌入人群，试图阻止这一行为。当人群中发出“不许动手”的声响那刻，宿明看到，警察正在大声和呐喊的男生争吵，让他停止，并用肩膀将他往人群外面顶。这个过程大约持续了一分钟，聚集的人群，让那个配有黑色国徽帽的警察低下了头，往人群的左侧后退。</p>
 <p>23点58分，周围的人更多了，警方在马路中央站成一排，化身人墙，企图分散人流，不让两边的人群流动。但口号，更响了，尤其是那句“上海放人”，整整持续了2分钟上下。</p>
 <p>28日，零点58分，一名男生在马路侧边的大桥附近大声喊，“我们走起来吧，游行就是要走起来才有意义！”</p>
 <p>离他大约50米左右，前排的女生回应道，“此刻，我们在这里就是意义”，随后，攒动的人群一次次地重回马路，面对警方毫不示弱。</p>
