--- a/_posts/2022-11-29-INITIUM-现场-北京亮马河-此刻-我们在这里就是意义.html
+++ b/_posts/2022-11-29-INITIUM-现场-北京亮马河-此刻-我们在这里就是意义.html
@@ -5,10 +5,10 @@ date: 2022-11-29 06:21:00.000000000 +00:00
 link: https://theinitium.com/article/20221129-mainland-beijing-zero-covid-protests/
 categories: initium
 tags: blog
-author: 端传媒中国组 发自新加坡
+author: 端传媒中国组
 ---
 
-<p>「他们留下了各种口号、宣言，也为某种自由的信仰而呐喊。」</p><p>端传媒中国组 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221129-mainland-beijing-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/81734e5a8ed3458ab5c6368d510a36a8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞的游行，部分人手持白纸，高喊口号。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「他们留下了各种口号、宣言，也为某种自由的信仰而呐喊。」</p><p>端传媒中国组</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221129-mainland-beijing-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/81734e5a8ed3458ab5c6368d510a36a8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞的游行，部分人手持白纸，高喊口号。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞的游行，部分人手持白纸，高喊口号。<span class="credit">摄影：Sophie Mou</span></figcaption></figure><p>11月27日晚上11点半左右，被疏散的人群，重新聚集在北京朝阳区京城大厦附近（新源里、新源南路与新东路交界处、朝阳区新源南路12号），规模至少500人。他们当中有不少人拿着鲜花、空白的A4纸，被警方分据于丁字路口的两侧，口号不时响起。</p>
 <p>“不要核酸，要自由”“言论自由，新闻自由”“上海放人”“电影自由”“要自由”“取消核酸”。</p>
 <p>口号和呐喊的声量加大，小范围的骚乱随之而来。聚集的中心区块，有人带头唱起了国歌，便衣、警察涌入人群，试图阻止这一行为。当人群中发出“不许动手”的声响那刻，宿明看到，警察正在大声和呐喊的男生争吵，让他停止，并用肩膀将他往人群外面顶。这个过程大约持续了一分钟，聚集的人群，让那个配有黑色国徽帽的警察低下了头，往人群的左侧后退。</p>
@@ -69,7 +69,7 @@ author: 端传媒中国组 发自新加坡
 <p>零点40分左右，几辆大巴车开来，宿明收到了来自朋友的消息，说现场有可能要放瓦斯，提醒她注意安全。</p>
 <p>1点02分，由于警方刻意想要分散聚集的人群，他们不让马路两边的人流互通。宿明前面一名女生向人群说，“我们可以手挽手地往前走，要不然会被打散的，我们已经被打散了。”她说完后，警察往这边涌过来，嘴里开始叫嚷，“干什么呢”，然后直接上手，把挎着手想要往前走的两位拉开。最后，大约10几个警察连成一片，在人群里推着、拉着，打下了宿明前面一名女生的帽子，也用手划到了她的脸。</p>
 <p>宿明一直举着手机在拍，但场面混乱，画面里，摄像头有时是对着人，有时是黑压压的一片人影。</p>
-<p>警察前面有一个高个男生，穿着黑色的过膝羽绒服，他对着人群喊着，往后撤、后退。最后，他举起了双手，背对着警察，正对着我们，说“我们自己走。”</p>
+<p>警察前面有一个高个男生，穿着黑色的过膝羽绒服，他对着人群喊着，往后撤、后退。最后，他举起了双手，背对着警察，正对着人群，说“我们自己走。”</p>
 <p>但人群显然不愿意，觉得他是便衣。宿明边上的人在说，刚才警察打了我的头。</p>
 <p>“让打人的警察出来”。</p>
 <p>如此合理的理由，最后的结果是，“撤、撤，兄弟们。”</p>
@@ -85,10 +85,11 @@ author: 端传媒中国组 发自新加坡
 <p>路过的两名女生停下来和李康聊天，聊天之间，其中一个女孩扯了扯口罩，她说：“今天来就是为了不戴这个，要不是为了挡脸谁还戴。”虽然警车就在他们两米之外，但年轻人完全不在意。车上躺着的警察也是，他们昏昏欲睡。</p>
 <p>又走过来几名年轻人，他们看上去有点沮丧，其中一名女生说：“我们才这么点人，警察人太多了。”</p>
 <p>和他们道别后，李康和朋友们还是决定试试。这时已经是凌晨两点，他们向丁字路口方向走了七八百米后，遇到了警方的封锁线。他们谎称车停在路的另一侧。意想不到的是，五六名警察中，一名老警察没多盘问就让他们通过了。</p>
-<p>穿过丁字路口走到亮马河河边已经是凌晨两点半，李康、王猛还有朋友们在黑暗中沿河而行，主路灯火通明。出现人影时，大家都有点紧张，走近后发现不是警察，彼此都松了口气。</p>
-<p>终于穿过使馆区来到亮马桥时，李康看到，这里也已经散场。</p>
-<p>李康、王猛不再避讳身边的警察，站在桥旁叙旧。没一会儿，一排警察中有人走过来好言劝说：“都两点了，别在这儿说了呗，该回家睡觉了。”</p>
+<p>从丁字路口走到亮马河河边已经是凌晨两点半，李康、王猛还有朋友们在黑暗中沿河而行，主路灯火通明。出现人影时，大家都有点紧张，走近后发现不是警察，彼此都松了口气。</p>
+<p>穿过使馆区来到亮马桥时，李康看到，这里也已经散场。</p>
+<h2>尾声</h2>
 <p>北京再次回归平静。载李康来到现场的网约车司机告诉他：“这是我最近见到人最多的一次。”</p>
+<p>李康、王猛不再避讳身边的警察，站在桥旁叙旧。一排警察中有人走过来好言劝说：“都两点了，别在这儿说了呗，该回家睡觉了。”</p>
 <p>宿明见到的最后一幕，是在附近的街道上。人群边走边喊，不断重复：“要自由”。</p>
 <p>凌晨3点48分，宿明和朋友找到了一家还开着的7-11便利店，买了两瓶水。结完账，准备出去的时候，一名戴眼镜的女生走了进来，她脸上有些汗，气息也喘着，说，“我手机没电了，这里有充电宝吗？我想买瓶水。”</p>
 <p>店员摇头，女孩离开了。</p>
